# wasm-raytracer

./: .gitignore  Cargo.toml  README.md  index.html  index.js
pkg/: raytracer.js  raytracer_bg.wasm
public/: index.js  worker.js
src/: aabb.rs  bvh.rs  camera.rs  common.rs  geometry.rs  hitable.rs  hitable_list.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  perlin.rs  rand.rs  ray.rs  rng.rs  scene.rs  sphere.rs  texture.rs  vec3.rs
src/geometry/: aabb.rs  ray.rs  vec3.rs
src/hittable/: aabb.rs  bvh.rs  hitrec.rs  mod.rs  primative.rs  sphere.rs
