[package]
name = "raytracer"
version = "0.1.0"
authors = ["jgrazian"]
edition = "2018"
description = "A rust-wasm raytracer"
repository = "https://github.com/jgrazian/wasm-raytracer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

wee_alloc = { version = "0.4.2", optional = true }

[features]
default = ["wee_alloc"]