[package]
name = "wasm_raytracer"
version = "0.1.0"
authors = ["Joey Graziano <joeyg11@vt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
png = "0.16.8"
rayon = "1.5.0"
indicatif = {version = "0.15.0", features = ["rayon"]}
